# nostra-cortex

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  IMPLEMENTATION_SCOPE.md  README.md  RECOVERY_SCOPE.md  RECOVERY_SLICE_PLAN.md  SLICE_SCOPE.md  UNOWNED_DISPOSITION.md  icp.yaml
cortex/: .env  .gitignore  Cargo.toml  README.md  fix_registry.py  fix_restored.py  fix_routes.py  fix_routes2.py  fix_start.py  parse_start.py  patch_workbench.py  restore_heap.py  rm_tests.py  spec.md  strip_blocks.py  strip_routes.py  test.py  test_errors.txt
cortex/_archive/: spec_2026-03-28_PRE_UPDATE_CHAT_REALIGNMENT.md
cortex/apps/cortex-desktop/: fix_dpub_calls.py  test_gateway.js
cortex/apps/cortex-eudaemon/: Cargo.toml  patch_clients.sh  patch_vfs.sh
cortex/apps/cortex-eudaemon/assets/: tailwind_fallback.css
cortex/apps/cortex-eudaemon/src/: lib.rs  main.rs
cortex/apps/cortex-eudaemon/tests/: acp_gateway_integration.rs  acp_staging_operationalization.rs  gateway_parity.rs  knowledge_graph_phase_e.rs  knowledge_graph_query_adapter.rs  motoko_graph_gateway_integration.rs
cortex/apps/cortex-gateway/: Cargo.toml
cortex/apps/cortex-gateway/src/: main.rs
cortex/apps/cortex-git-adapter/: Cargo.toml  README.md
cortex/apps/cortex-git-adapter/config/: git_adapter_registry.toml
cortex/apps/cortex-git-adapter/src/: adapter.rs  config.rs  endpoints.rs  main.rs  metrics.rs  projector.rs  reconcile.rs  state.rs  workspace.rs
cortex/apps/cortex-web/: .env  README.md  index.html  package-lock.json  package.json  playwright.heap.config.ts  playwright.observability.config.ts  snap_heap.cjs  tailwind.config.js  test-output.txt  tsconfig.json  verify_ui.mjs  vite.config.ts
cortex/apps/cortex-web/.playwright-cli/: page-2026-03-20T09-08-13-122Z.yml  page-2026-03-20T16-20-35-622Z.yml
cortex/apps/cortex-web/_archive/: styles_2026-03-24_PRE_PROVIDER_CARD_POLISH.css
cortex/apps/cortex-web/scripts/: e2e_automation.py  run-e2e.sh
cortex/apps/cortex-web/src/: App.tsx  TestHarnessApp.tsx  WorkbenchAppShell.tsx  api.ts  contracts.ts  localDevBootstrap.ts  main.tsx  styles.css  sw.ts
cortex/apps/cortex-web/tests/: actionExecutorContract.test.ts  agentActivityPanelContract.test.ts  apiBaseUrl.test.ts  benchmarkProjection.test.ts  brandLogoPolicy.test.ts  brandPolicyApiContract.test.ts  capabilityGraphApiContract.test.ts  capabilityOverlayModel.test.ts  chatSocketContract.test.ts  contributionsCockpitContract.test.ts  conversationRegistry.test.ts  customViewsStore.test.ts  dataTableContract.test.ts  exploreViewSettings.test.ts  flowStudioLabels.test.ts  gateSummaryRendererContract.test.ts  heapActionExecutorContract.test.ts  heapActionPlanContract.test.ts  heapAggregation.test.ts  heapApiContract.test.ts  heapArtifactRouting.test.ts  heapBlockCardTimestamp.test.ts  heapCommentAuthorityContract.test.ts  heapContributorCardModel.test.ts  heapDetailActionsContract.test.ts  heapLaneLayoutContract.test.ts  heapRelationEditorContract.test.ts  heapRelationsContract.test.ts  heapReviewQueueContract.test.ts  heapSolicitationRenderModel.test.ts  heapViewModelContract.test.ts  initiativeKickoffTemplates.test.ts  internetIdentityOperatorSession.test.ts  labsDraftSurface.test.ts  layoutExperimentsContract.test.ts  navSectionsContract.test.ts  operatorLoginPlacement.test.ts  previewFixtureCatalog.test.ts  providerBatchPolicy.test.ts  providerCatalog.test.ts  (+39 more)
cortex/apps/cortex-worker/: Cargo.toml
cortex/apps/cortex-worker/src/: agent_workflows.rs  codebase_parser.rs  main.rs  temporal.rs  temporal_native.rs  temporal_sdk.rs  translator.rs
cortex/cvos_prototype/: Cargo.toml
cortex/cvos_prototype/src/: deliberation.rs  main.rs
cortex/experiments/a2ui-terminal/: ARCHITECTURE_EVALUATION.md  package-lock.json  package.json  tsconfig.json
cortex/experiments/a2ui-terminal/examples/: gate_summary_envelope.json  heap_note_envelope.json  workflow_handoff_envelope.json
cortex/experiments/a2ui-terminal/src/: A2UITerminalInterpreter.ts  benchmark.ts  envelopeLoader.ts  fixtures.ts  index.ts  mockPayload.ts  planner.test.ts  planner.ts  repoAuthorityFixtures.ts  terminalDocument.ts  types.ts  workbenchRoutes.ts
cortex/experiments/taui-comparative/: package-lock.json  package.json  tsconfig.json
cortex/libraries/cortex-agents/: Cargo.toml
cortex/libraries/cortex-domain/: Cargo.toml
cortex/libraries/cortex-ic-adapter/: Cargo.toml
cortex/libraries/cortex-runtime/: Cargo.toml
cortex/libraries/cortex-workbench-contracts/: Cargo.toml
cortex/references/: potluck.md
nostra/apps/cortex-desktop/: Cargo.toml
nostra/backend/governance/: Cargo.toml
nostra/backend/governance/src/: lib.rs
nostra/backend/workflow_engine/: Cargo.toml  canister.yaml
nostra/extraction/: Cargo.toml
nostra/extraction/src/: contribution_graph.rs  lib.rs  parser_bridge.rs  parser_contract.rs
nostra/frontend/: Cargo.toml  package-lock.json  package.json  playwright.config.ts
nostra/frontend/src/: bridge.rs  main.rs  monitor.rs  monitor_types_temp.rs  settings_modal.rs  streaming.rs  zk_service.rs
nostra/labs/memory_evolution/: Cargo.toml
nostra/libraries/cortex-runtime/: Cargo.toml
nostra/libraries/nostra-workflow-core/: Cargo.toml
nostra/scripts/ingest_gaia/: Cargo.toml  sample.jsonl
nostra/shared/: Cargo.toml
nostra/shared/src/: lib.rs
nostra/worker/: Cargo.toml  worker_keys.json
nostra/worker/benches/: arena.rs
nostra/worker/src/: activity_service.rs  agent_builder.rs  api.rs  benchmark_service.rs  book.rs  config_service.rs  embedding_provider.rs  gateway_service.rs  kip_client.rs  lib.rs  live_generation.rs  main.rs  media_service.rs  mock_embedding.rs  ollama_embedder.rs  openai_embedder.rs  provider_routing.rs  search.rs  secret_redaction.rs  temporal_governor.rs  vector_client.rs  vector_service.rs  worktree_service.rs
renderers/dioxus/: Cargo.toml  README.md
renderers/dioxus/src/: lib.rs  theme.rs
src/nostra_backend/: Cargo.toml
src/nostra_backend/src/: lib.rs
src/nostra_workflow_engine/: Cargo.toml
src/nostra_workflow_engine/src/: a2ui_adapter.rs  execution.rs  lib.rs  registry.rs
(+2575 files in other folders)
