[workspace]
resolver = "2"
members = [
  "apps/cortex-git-adapter",
  "apps/cortex-eudaemon",
  "apps/cortex-gateway",
  "libraries/cortex-workbench-contracts",
  "libraries/cortex-domain",
  "libraries/cortex-runtime",
  "libraries/cortex-ic-adapter", "libraries/cortex-agents",
  "cvos_prototype"
]
