[package]
name = "cvos_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
wgpu = "0.19"
bevy_ecs = "0.13"
loro = "1.0" # Updated to likely stable version or check latest
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
