[package]
name = "nostra-extraction"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"
anyhow = "1.0"
nostra-core = { path = "../libraries/nostra-core" }
cortex-domain = { path = "../../cortex/libraries/cortex-domain" }
nostra-resource-ref = { path = "../../libraries/nostra-resource-ref" }
sha2 = "0.10"
hex = "0.4"

[workspace]

[[bin]]
name = "nostra-contribution-cli"
path = "src/bin/nostra_contribution_cli.rs"
test = false

[[bin]]
name = "nostra-docling-adapter"
path = "src/bin/nostra_docling_adapter.rs"
test = false

[[bin]]
name = "nostra-liteparse-adapter"
path = "src/bin/nostra_liteparse_adapter.rs"
test = false

[[bin]]
name = "nostra-markitdown-adapter"
path = "src/bin/nostra_markitdown_adapter.rs"
test = false
