[package]
name = "nostra-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candid = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.7", features = ["web", "router"] }
futures-util = "0.3"
hex = "0.4"
ic-agent = "0.40"
js-sys = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
