[package]
name = "nostra-shared"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
