[package]
name = "cortex_worker"
version = "0.1.0"
edition = "2021"
default-run = "cortex_worker"

[workspace]

[lib]
name = "cortex_worker"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nostra-core = { path = "../libraries/nostra-core" }
nostra-workflow-core = { path = "../libraries/nostra-workflow-core" }
nostra-media = { path = "../../libraries/nostra-media" }
nostra-extraction = { path = "../extraction" }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
async-trait = "0.1"
dotenvy = "0.15"

rayon = "1.8"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# IC Dependencies
ic-agent = "0.40.1"
candid = "0.10"
garcon = "0.2"
rand = "0.8"
base64 = "0.21"
nostra-shared = { path = "../shared" }
uuid = { version = "1.0", features = ["v4"] }
serde_yaml = "0.9.34"
x25519-dalek = "2.0"

[dev-dependencies]
pocket-ic = "12.0"
tokio-tungstenite = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }
