[package]
name = "cortex_renderer_dioxus"
version = "0.1.0"
edition = "2021"
description = "Nostra Cortex UI Substrate Renderer (A2UI -> Dioxus)"

[dependencies]
dioxus = { version = "0.7.2", features = ["web", "desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
dioxus-ssr = "0.7.2"

[lib]
crate-type = ["cdylib", "rlib"]
