[package]
name = "nostra_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.9"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
serde = "1.0"
serde_json = "1.0"
nostra_core = { path = "../nostra_core" }
nostra_vfs = { path = "../nostra_vfs" }
nostra_workflow_engine = { path = "../nostra_workflow_engine" }
async-trait = "0.1.89"
