[package]
name = "nostra_workflow_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "=0.9.11"
serde = "1.0"
serde_json = "1.0"
ic-cdk = "0.13"
nostra_core = { path = "../nostra_core" }
nostra_vfs = { path = "../nostra_vfs" }
cortex-domain = { path = "../../cortex/libraries/cortex-domain" }
sha2 = "0.10"
