[package]
name = "cortex-eudaemon"
version = "0.1.0"
edition = "2021"
autobins = false
autotests = false

[features]
default = []
cortex_runtime_v0 = []
service-scaffolds = []
siq-service-client = []
temporal-sdk-native = [
  "dep:squads-temporal-client",
  "dep:squads-temporal-sdk-core-protos",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
candid = "0.10"
chrono = { version = "0.4", features = ["serde"] }
casbin = { version = "2.18.1", default-features = false, features = ["runtime-tokio", "incremental"] }
cortex-domain = { path = "../../libraries/cortex-domain" }
cortex-ic-adapter = { path = "../../libraries/cortex-ic-adapter" }
cortex-runtime = { path = "../../libraries/cortex-runtime" }
cortex-workbench-contracts = { path = "../../libraries/cortex-workbench-contracts" }
futures-util = "0.3"
hex = "0.4"
home = "0.5"
ic-agent = "0.40"
nostra-extraction = { path = "../../../nostra/extraction" }
nostra-cloudevents = { path = "../../../nostra/libraries/nostra-cloudevents" }
nostra-resource-ref = { path = "../../../libraries/nostra-resource-ref" }
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
squads-temporal-client = { version = "0.3.1", optional = true }
squads-temporal-sdk-core-protos = { version = "0.3.1", optional = true }

[[bin]]
name = "cortex_eudaemon"
path = "src/main.rs"

[[bin]]
name = "gateway_server"
path = "src/bin/gateway_server.rs"

[[test]]
name = "gateway_parity"
path = "tests/gateway_parity.rs"
