[package]
name = "cortex-git-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
bytes = "1"
candid = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
http = "1"
ic-agent = "0.40"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tower-http = { version = "0.5", features = ["cors"] }
