[package]
name = "cortex-worker"
version = "0.1.0"
edition = "2024"

[features]
default = []
temporal-sdk = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.3"
cortex-agents = { version = "0.1.0", path = "../../libraries/cortex-agents" }
cortex-domain = { version = "0.1.0", path = "../../libraries/cortex-domain" }
async-trait = "0.1.89"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
