[package]
name = "cortex-domain"
version = "0.1.0"
edition = "2021"
description = "Deterministic domain primitives for the Cortex runtime layer"

[dependencies]
async-trait = "0.1"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
