[package]
name = "cortex-ic-adapter"
version = "0.1.0"
edition = "2021"
description = "ICP boundary adapters for Cortex runtime"

[dependencies]
async-trait = "0.1"
candid = { version = "0.10", features = ["value"] }
cortex-domain = { path = "../cortex-domain" }
cortex-runtime = { path = "../cortex-runtime" }
ic-agent = "0.40.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt"] }
