[package]
name = "cortex-runtime"
version = "0.1.0"
edition = "2021"
description = "Execution runtime orchestration for Cortex"

[features]
default = []
baml-policy-experiments = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
cortex-domain = { path = "../cortex-domain" }
hex = "0.4"
nostra-cloudevents = { path = "../../../nostra/libraries/nostra-cloudevents" }
nostra-workflow-core = { path = "../../../nostra/libraries/nostra-workflow-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }

