[package]
name = "cortex-desktop"
version = "0.1.0"
edition = "2021"
autobins = false
autotests = false

[features]
default = []
cortex_runtime_v0 = ["dep:cortex-runtime"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cortex-domain = { path = "../../libraries/cortex-domain" }
cortex-runtime = { path = "../../libraries/cortex-runtime", optional = true }
hex = "0.4"
home = "0.5"
nostra-cloudevents = { path = "../../libraries/nostra-cloudevents" }
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[[test]]
name = "gateway_parity"
path = "tests/gateway_parity.rs"
