[package]
name = "nostra-governance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nostra-workflow-core = { path = "../../libraries/nostra-workflow-core" }
ic-stable-structures = "0.7.2"
postcard = { version = "1", default-features = false, features = ["use-std"] }
