[package]
name = "nostra-workflow-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
postcard = { version = "1", default-features = false, features = ["use-std"] }
candid = "0.10"
ic-cdk = "0.18"

ic-cdk-timers = "0.12" # Use timers instead of heartbeat
nostra-workflow-core = { path = "../../libraries/nostra-workflow-core" }
ic-stable-structures = "0.7.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"

[workspace]
