[package]
name = "nostra-workflow-core"
version = "0.1.0"
edition = "2021"
description = "Core traits and types for the Nostra Workflow Engine"

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"

log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
