[package]
name = "ingest_gaia"
version = "0.1.0"
edition = "2021"

[dependencies]
nostra-shared = { path = "../../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
